--- a/about.html
+++ b/about.html
@@ -3,31 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NK. About</title>
+    <title>About Me</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>
-      <div class="up">
-        <ul>
-          <li>HOME</li>
-          <li>ABOUT</li>
-        </ul>
-      </div>
-      <div class="rightside">
-        <ul>
-          <li>CONTACT</li>
-          <li>PROJECTS</li>
-        </ul>
-      </div>
-    </header>
-    <main>
-      <div class="white"></div>
-      <div class="black"></div>
-    </main>
-    <footer>
-      <div class="down"></div>
-      <div class="leftside"></div>
-    </footer>
+    <div>
+      <img
+        src="./Bilder/IMG_1583.jpg"
+        alt="Nellnachdenklich"
+        title="Nellschautnachdenklichnachobenundüberihristeinesprechblasemithelloworldschriftzug"
+      />
+    </div>
   </body>
 </html>
