--- a/index.html
+++ b/index.html
@@ -5,29 +5,104 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NK. Portfolio</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&family=Gloria+Hallelujah&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&family=Gloria+Hallelujah&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
+      rel="stylesheet"
+    />
+    <link />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
   </head>
   <body>
     <header>
       <div class="up">
         <ul class="navbarup">
-          <li class="normal"><b>Home</b></li>
-          <li class="normal"><b>About</b></li>
+          <li class="normal item">
+            <a class="language de" href="">DE</a>
+          </li>
+          <li class="normal item">
+            <a class="language en" href="">EN</a>
+          </li>
+          <li class="normal home item">
+            <a class="nav_link" href="index.html">Home</a>
+          </li>
         </ul>
       </div>
       <div class="rightside">
         <ul class="navbarright">
-          <li class="vertical"><b>Contact</b></li>
-          <li class="vertical"><b>Projects</b></li>
+          <li class="vertical item">
+            <a class="nav_link" href="about.html">About</a>
+          </li>
+          <li class="vertical item">
+            <a class="nav_link" href="">Projects</a>
+          </li>
         </ul>
       </div>
     </header>
     <main>
-      <div class="white"></div>
-      <div class="black"></div>
+      <section>
+        <div class="blacktext">
+          <p class="gloria">"Lets turn the world upside down together"</p>
+          <p># &lt;where&gt; art and <code>code</code> </merge></p>
+          <p>Nell Konersmann</p>
+        </div>
+        <div class="white"></div>
+        <div class="blackpicture">
+          <img
+            src="./Bilder/IMG_1580.PNG"
+            alt="cyberpunknell"
+            title="NellimCyberpunkoutfitmitGlaskugelinderHandwoeinStückCodeaufdemKopfsteht"
+          />
+        </div>
+      </section>
     </main>
     <footer>
-      <div class="down"></div>
-      <div class="leftside"></div>
+      <div class="down">
+        <ul class="navbardown">
+          <li class="normal item"><a class="nav_link" href="">Contact</a></li>
+          <li class="normal item"><a class="nav_link" href="">Impressum</a></li>
+        </ul>
+      </div>
+      <div class="leftside">
+        <ul class="navbarleft">
+          <li class="vertical2">
+            <a href="">
+              <i class="fa-brands fa-instagram" style="color: #000000"></i
+            ></a>
+          </li>
+          <li class="vertical2">
+            <a href=""
+              ><i class="fa-brands fa-pinterest" style="color: #000000"></i
+            ></a>
+          </li>
+          <li class="vertical2">
+            <a href=""
+              ><i class="fa-brands fa-linkedin" style="color: #000000"></i>
+            </a>
+          </li>
+          <li class="vertical2">
+            <a href=""
+              ><i class="fa-brands fa-github" style="color: #000000"></i
+            ></a>
+          </li>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
