--- a/about.html
+++ b/about.html
@@ -7,12 +7,34 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div>
-      <img
-        src="./Bilder/IMG_1583.jpg"
-        alt="Nellnachdenklich"
-        title="Nellschautnachdenklichnachobenundüberihristeinesprechblasemithelloworldschriftzug"
-      />
-    </div>
+    <section class="aboutside">
+      <div class="abouttext">
+        <h1>
+          # &lt;where&gt; <span class="violett">art</span> and
+          <span class="firacoda">code</span> &lt;/merge&gt;
+        </h1>
+        <article>
+          <p>
+            “Neue Erfahrungen, Leidenschaft und Liebe fließen in jede Linie
+            meiner Designs ein.” Als Webentwicklerin verbinde ich Kreativität
+            mit Technologie, um ansprechende und nutzerfreundliche Websites zu
+            gestalten. Lassen Sie uns gemeinsam ihre Online-Präsenz
+            transformieren und einzigartige Lösungen für ihre Bedürfnisse
+            entwickeln. </br> Frei nach meinem Motto:
+          </p>
+          <span class="gloria"
+            >“Let`s turn the world upside down together”</span
+          >
+        </article>
+      </div>
+      <div>
+        <img
+          class="aboutpic"
+          src="./Bilder/IMG_1583.jpg"
+          alt="Nellnachdenklich"
+          title="Nellschautnachdenklichnachobenundüberihristeinesprechblasemithelloworldschriftzug"
+        />
+      </div>
+    </section>
   </body>
 </html>
