--- a/index.html
+++ b/index.html
@@ -33,24 +33,24 @@
     <header>
       <div class="up">
         <ul class="navbarup">
-          <li class="normal item">
+          <li class="normal">
             <a class="language de" href="">DE</a>
           </li>
-          <li class="normal item">
+          <li class="normal">
             <a class="language en" href="">EN</a>
           </li>
-          <li class="normal home item">
+          <li class="normal home">
             <a class="nav_link" href="index.html">Home</a>
           </li>
         </ul>
       </div>
       <div class="rightside">
         <ul class="navbarright">
-          <li class="vertical item">
-            <a class="nav_link" href="about.html">About</a>
+          <li class="vertical">
+            <a class="nav_link_side" href="about.html">About</a>
           </li>
-          <li class="vertical item">
-            <a class="nav_link" href="">Projects</a>
+          <li class="vertical">
+            <a class="nav_link_side" href="">Projects</a>
           </li>
         </ul>
       </div>
@@ -59,7 +59,6 @@
       <section>
         <div class="blacktext">
           <p class="gloria">"Lets turn the world upside down together"</p>
-          <p># &lt;where&gt; art and <code>code</code> </merge></p>
           <p>Nell Konersmann</p>
         </div>
         <div class="white"></div>
@@ -75,8 +74,8 @@
     <footer>
       <div class="down">
         <ul class="navbardown">
-          <li class="normal item"><a class="nav_link" href="">Contact</a></li>
-          <li class="normal item"><a class="nav_link" href="">Impressum</a></li>
+          <li class="normal"><a class="nav_link" href="">Contact</a></li>
+          <li class="normal"><a class="nav_link" href="">Impressum</a></li>
         </ul>
       </div>
       <div class="leftside">
