--- a/about.html
+++ b/about.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <header>
+      <a class="back" href="index.html">&#9664;</a>
+    </header>
     <section class="aboutside">
       <div class="abouttext">
         <h1>
@@ -15,16 +18,18 @@
         </h1>
         <article>
           <p>
-            “Neue Erfahrungen, Leidenschaft und Liebe fließen in jede Linie
-            meiner Designs ein.” Als Webentwicklerin verbinde ich Kreativität
-            mit Technologie, um ansprechende und nutzerfreundliche Websites zu
-            gestalten. Lassen Sie uns gemeinsam ihre Online-Präsenz
-            transformieren und einzigartige Lösungen für ihre Bedürfnisse
-            entwickeln. </br> Frei nach meinem Motto:
+            “In jede Linie meines Design fließen meine Erfahrungen, meine
+            Leidenschaft und viel Liebe.”
           </p>
-          <span class="gloria"
-            >“Let`s turn the world upside down together”</span
-          >
+
+          <p>
+            Als Webentwicklerin verbinde ich Kreativität mit Technologie, um
+            ansprechende und nutzerfreundliche Websites zu gestalten. Lassen Sie
+            uns gemeinsam ihre Online-Präsenz transformieren und einzigartige
+            Lösungen für ihre Bedürfnisse entwickeln.
+          </p>
+          <p>Frei nach meinem Motto:</p>
+          <p class="gloria top">“Let`s turn the world upside down together”</p>
         </article>
       </div>
       <div>
